#50 building out a new index page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,107 @@
-<!DOCTYPE html>
-<html>
-  <head></head>
-  <body>
-    - <a href="demos/">Demos</a> <br/>
-    - <a href="docs/build/html/">Documentation</a> <br/>
-    - <a href="tests/">Unit tests</a> <br/>
-  </body>
-</html>
+<!doctype html>
+<html><head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="site_media/mgrl_style.css" />
+  <script type="text/javascript" src="site_media/navigation.js"></script>
+  <script type="text/javascript" src="site_media/test_scene.js"></script>
+</head><body>
+
+  <canvas id="bg_demo"></canvas>
+  
+  <div id="nav" class="overlay">
+    <div id="nav_about" class="nav_item">
+      <a href="#about">About</a>
+    </div>
+    <div id="nav_demos" class="nav_item">
+      <a href="#demos">Demos</a>
+    </div>
+    <div id="nav_downloads" class="nav_item">
+      <a href="#downloads">Use M.GRL!</a>
+    </div>
+    <div id="nav_resources" class="nav_item">
+      <a href="#resources">Get Involved</a>
+    </div>
+    <div id="nav_community" class="nav_item">
+      <a href="#community">Community</a>
+    </div>
+  </div>
+
+  <div id="about" class="overlay content">
+    <h1>About M.GRL</h1>
+    
+    <p>
+      M.GRL, also known as the Mondaux Graphics and Recreation
+      Library - but pronounced "Magical Girl" or "M-Girl" - is a WebGL
+      rendering framework ostensibly for writing games with.
+    </p>
+
+    <p>
+      M.GRL is currently "UNDER CONSTRUCTION" (insert fire gif here) -
+      meaning that the API is not yet stable.  There are several
+      features missing, and several major bugs yet, and so it is
+      currently not advised that you build a project around it yet.
+      That said, it is a near-term goal to make it into something
+      someone might actually want to use.  Outside interest is
+      welcome, especially with finding bugs!
+    </p>
+
+    <p>
+      M.GRL provides the following features:
+    </p>
+    <ul>
+      <li>
+        multipass rendering
+      </li>
+      <li>
+        robust animation capabilities
+      </li>
+      <li>
+        a well optimized scene graph
+      </li>
+      <li>
+        databinding shader variables
+      </li>
+      <li>
+        integration with Blender
+      </li>
+      <li>
+        source code available under the LGPLv3
+      </li>
+      <li>
+        ...and so much more!
+      </li>
+    </ul>
+  </div>
+
+  <div id="demos" class="overlay content">
+    <h1>Tech Demos</h1>
+  </div>
+
+  <div id="downloads" class="overlay content">
+    <h1>Use M.GRL!</h1>
+
+    <p>
+      This section would have the release download links, and then
+      links to tutorials.
+    </p>
+  </div>
+
+  <div id="resources" class="overlay content">
+    <h1>Resources</h1>
+
+    <p>
+      This section would have links to the github page, reference API,
+      wiki, issue tracker, and unit tests.  It may also contain a few
+      words about how to get in touch.
+    </p>
+  </div>
+
+  <div id="community" class="overlay content">
+    <h1>Community</h1>
+    <p>
+      Nothing here yet, sorry!  Feel free to say hello
+      <a href="http://twitter.com/ladyaeva">on twitter</a>, though!
+    </p>
+  </div>
+
+</body></html>
