#50 new index page works, needs content now

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html><head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="site_media/mgrl_style.css" />
+  <script type="text/javascript" src="demos/gl-matrix.js"></script>
+  <script type="text/javascript" src="mgrl.js"></script>
   <script type="text/javascript" src="site_media/navigation.js"></script>
   <script type="text/javascript" src="site_media/test_scene.js"></script>
 </head><body>
@@ -36,7 +38,7 @@
     </p>
 
     <p>
-      M.GRL is currently "UNDER CONSTRUCTION" (insert fire gif here) -
+      M.GRL is currently "UNDER CONSTRUCTION" (insert 90's gif here) -
       meaning that the API is not yet stable.  There are several
       features missing, and several major bugs yet, and so it is
       currently not advised that you build a project around it yet.
@@ -75,6 +77,9 @@
 
   <div id="demos" class="overlay content">
     <h1>Tech Demos</h1>
+    <p>
+      The old demos page can be found <a href="demos/">here</a>.
+    </p>
   </div>
 
   <div id="downloads" class="overlay content">
