Adjustments to website theme.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>About M.GRL</h1>
     
     <p>
-      M.GRL, also known as the Mondaux Graphics and Recreation
+      M.GRL, also known as the Midnight Graphics and Recreation
       Library - but pronounced "Magical Girl" or "M-Girl" - is a WebGL
       rendering framework ostensibly for writing games with.
     </p>
@@ -67,6 +67,9 @@
         integration with Blender
       </li>
       <li>
+        magical realism
+      </li>
+      <li>
         source code available under the LGPLv3
       </li>
       <li>
@@ -77,9 +80,53 @@
 
   <div id="demos" class="overlay content">
     <h1>Tech Demos</h1>
-    <p>
-      The old demos page can be found <a href="demos/">here</a>.
-    </p>
+    <div class="content_flexbox">
+      <p>
+        The old demos page can be found <a href="demos/">here</a>.
+      </p>
+      <p class="demo_link">
+        <a href="demos/05_webgl/">GLSL Abstraction</a>
+      </p>
+      <p class="demo_link">
+        <a href="demos/06_models/">3D Assets</a>
+      </p>
+      <p class="demo_link">
+        <a href="demos/07_multipass/">Post Processing</a>
+      </p>
+      <p class="demo_link">
+        <a href="demos/gavroche_hall/">JTA Debug</a>
+      </p>
+      <p class="demo_link">
+        <a href="demos/bezier_pick/">Bezier Curves</a>
+      </p>
+      <div class="fine_print">
+        <p>
+          M.GRL is made available to you as free software under the terms of
+          the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>
+          or, at your option, any later version of the LGPL as published
+          by the Free Software Foundation.
+        </p>
+        <p>
+          The javascript portion of the demos listed on this page have
+          been dedicated to the public domain by way of
+          <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.
+        </p>
+        <p>
+          Some of the demos make use of art assets either from the 
+          <a href="http://lpc.opengameart.org/">Liberated Pixel Cup</a>
+          or are derrived from the <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>.
+          Contributions to the Liberated Pixel Cup are dual licensed under the
+          <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+          <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
+          licenses.
+        </p>
+        <p>
+          Original content (photographs and drawings in the first demo)
+          are not part of the Liberated Pixel Cup, and are made available to you under the
+          <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license.
+        </p>
+      </div>
+    </div>
   </div>
 
   <div id="downloads" class="overlay content">
