updated instances of 'mondaux' to say 'midnight' instead

--- a/demos/02_keyboard_controls/index.html
+++ b/demos/02_keyboard_controls/index.html
@@ -14,7 +14,7 @@
 
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">02 Keyboard Control for Games</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
