--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -16,12 +16,12 @@
 
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">03 Sprite Animation System</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
     <p>
-      The Mondaux Graphics and Recreation Library is able to import
+      The Midnight Graphics and Recreation Library is able to import
       .gani files and use them to facilitate keyframe animations.
       While it is not demonstrated in this demo, the playback of sound
       effects feature of .gani files is supported by MGRL.  The brief
