--- a/demos/06_models/index.html
+++ b/demos/06_models/index.html
@@ -13,7 +13,7 @@
   </style>
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">06 Models, Textures, Etc</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
