--- a/demos/bezier_pick/index.html
+++ b/demos/bezier_pick/index.html
@@ -42,7 +42,7 @@
   </style>
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">Picky Bezier</h1>
     <div id="demo_body">
       <div id="demo_header">
