--- a/demos/01_asset_management/index.html
+++ b/demos/01_asset_management/index.html
@@ -15,7 +15,7 @@
   </style>
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">01 Asset Management</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
   </div>
