--- a/demos/05_webgl/index.html
+++ b/demos/05_webgl/index.html
@@ -16,7 +16,7 @@
   </style>
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">05 WebGL Framework</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
     
