--- a/demos/index.html
+++ b/demos/index.html
@@ -53,7 +53,7 @@
   </style>
 </head><body>
   <div id="page">
-    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">demo index</h1>
 
     <div id="linkset">
