tweaking demo index contents

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         integration with Blender
       </li>
       <li>
-        magical realism
+        magical realism & photo surrealistic rendering
       </li>
       <li>
         source code available under the LGPLv3
