css changes to improve clarity on different types of demos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <canvas id="bg_demo"></canvas>
   
-  <div id="nav" class="overlay">
+  <div id="nav" class="overlay midday">
     <div id="nav_about" class="nav_item">
       <a href="#about">About</a>
     </div>
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div id="about" class="overlay content">
+  <div id="about" class="overlay midday content">
     <h1>About M.GRL</h1>
     
     <p>
@@ -78,7 +78,7 @@
     </ul>
   </div>
 
-  <div id="demos" class="overlay content">
+  <div id="demos" class="overlay midday content">
     <h1>Tech Demos</h1>
     <div class="content_flexbox">
       <p>
@@ -129,7 +129,7 @@
     </div>
   </div>
 
-  <div id="downloads" class="overlay content">
+  <div id="downloads" class="overlay midday content">
     <h1>Use M.GRL!</h1>
 
     <p>
@@ -138,7 +138,7 @@
     </p>
   </div>
 
-  <div id="resources" class="overlay content">
+  <div id="resources" class="overlay midday content">
     <h1>Resources</h1>
 
     <p>
@@ -148,7 +148,7 @@
     </p>
   </div>
 
-  <div id="community" class="overlay content">
+  <div id="community" class="overlay midday content">
     <h1>Community</h1>
     <p>
       Nothing here yet, sorry!  Feel free to say hello
