simplified css for the content box

--- a/index.html
+++ b/index.html
@@ -28,132 +28,134 @@
     </div>
   </div>
 
-  <div id="about" class="overlay midday content">
-    <h1>About M.GRL</h1>
-    
-    <p>
-      M.GRL, also known as the Midnight Graphics and Recreation
-      Library - but pronounced "Magical Girl" or "M-Girl" - is a WebGL
-      rendering framework ostensibly for writing games with.
-    </p>
-
-    <p>
-      M.GRL is currently "UNDER CONSTRUCTION" (insert 90's gif here) -
-      meaning that the API is not yet stable.  There are several
-      features missing, and several major bugs yet, and so it is
-      currently not advised that you build a project around it yet.
-      That said, it is a near-term goal to make it into something
-      someone might actually want to use.  Outside interest is
-      welcome, especially with finding bugs!
-    </p>
-
-    <p>
-      M.GRL provides the following features:
-    </p>
-    <ul>
-      <li>
-        multipass rendering
-      </li>
-      <li>
-        robust animation capabilities
-      </li>
-      <li>
-        a well optimized scene graph
-      </li>
-      <li>
-        databinding shader variables
-      </li>
-      <li>
-        integration with Blender
-      </li>
-      <li>
-        magical realism & photo surrealistic rendering
-      </li>
-      <li>
-        source code available under the LGPLv3
-      </li>
-      <li>
-        ...and so much more!
-      </li>
-    </ul>
-  </div>
-
-  <div id="demos" class="overlay midday content">
-    <h1>Tech Demos</h1>
-    <div class="content_flexbox">
+  <div id="content" class="overlay midday">
+    <div id="about">
+      <h1>About M.GRL</h1>
+      
       <p>
-        The old demos page can be found <a href="demos/">here</a>.
+        M.GRL, also known as the Midnight Graphics and Recreation
+        Library - but pronounced "Magical Girl" or "M-Girl" - is a
+        WebGL rendering framework ostensibly for writing games with.
       </p>
-      <p class="demo_link">
-        <a href="demos/05_webgl/">GLSL Abstraction</a>
+
+      <p>
+        M.GRL is currently "UNDER CONSTRUCTION" (insert 90's gif here)
+        - meaning that the API is not yet stable.  There are several
+        features missing, and several major bugs yet, and so it is
+        currently not advised that you build a project around it yet.
+        That said, it is a near-term goal to make it into something
+        someone might actually want to use.  Outside interest is
+        welcome, especially with finding bugs!
       </p>
-      <p class="demo_link">
-        <a href="demos/06_models/">3D Assets</a>
+
+      <p>
+        M.GRL provides the following features:
       </p>
-      <p class="demo_link">
-        <a href="demos/07_multipass/">Post Processing</a>
-      </p>
-      <p class="demo_link">
-        <a href="demos/gavroche_hall/">JTA Debug</a>
-      </p>
-      <p class="demo_link">
-        <a href="demos/bezier_pick/">Bezier Curves</a>
-      </p>
-      <div class="fine_print">
+      <ul>
+        <li>
+          multipass rendering
+        </li>
+        <li>
+          robust animation capabilities
+        </li>
+        <li>
+          a well optimized scene graph
+        </li>
+        <li>
+          databinding shader variables
+        </li>
+        <li>
+          integration with Blender
+        </li>
+        <li>
+          magical realism & photo surrealistic rendering
+        </li>
+        <li>
+          source code available under the LGPLv3
+        </li>
+        <li>
+          ...and so much more!
+        </li>
+      </ul>
+    </div>
+
+    <div id="demos">
+      <h1>Tech Demos</h1>
+      <div class="content_flexbox">
         <p>
-          M.GRL is made available to you as free software under the terms of
-          the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>
-          or, at your option, any later version of the LGPL as published
-          by the Free Software Foundation.
+          The old demos page can be found <a href="demos/">here</a>.
         </p>
-        <p>
-          The javascript portion of the demos listed on this page have
-          been dedicated to the public domain by way of
-          <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.
+        <p class="demo_link">
+          <a href="demos/05_webgl/">GLSL Abstraction</a>
         </p>
-        <p>
-          Some of the demos make use of art assets either from the 
-          <a href="http://lpc.opengameart.org/">Liberated Pixel Cup</a>
-          or are derrived from the <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>.
-          Contributions to the Liberated Pixel Cup are dual licensed under the
-          <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
-          <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
-          licenses.
+        <p class="demo_link">
+          <a href="demos/06_models/">3D Assets</a>
         </p>
-        <p>
-          Original content (photographs and drawings in the first demo)
-          are not part of the Liberated Pixel Cup, and are made available to you under the
-          <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license.
+        <p class="demo_link">
+          <a href="demos/07_multipass/">Post Processing</a>
         </p>
+        <p class="demo_link">
+          <a href="demos/gavroche_hall/">JTA Debug</a>
+        </p>
+        <p class="demo_link">
+          <a href="demos/bezier_pick/">Bezier Curves</a>
+        </p>
+        <div class="fine_print">
+          <p>
+            M.GRL is made available to you as free software under the terms of
+            the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>
+            or, at your option, any later version of the LGPL as published
+            by the Free Software Foundation.
+          </p>
+          <p>
+            The javascript portion of the demos listed on this page have
+            been dedicated to the public domain by way of
+            <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.
+          </p>
+          <p>
+            Some of the demos make use of art assets either from the 
+            <a href="http://lpc.opengameart.org/">Liberated Pixel Cup</a>
+            or are derrived from the <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>.
+            Contributions to the Liberated Pixel Cup are dual licensed under the
+            <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+            <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> licenses.
+          </p>
+          <p>
+            Original content (photographs and drawings in the first
+            demo) are not part of the Liberated Pixel Cup, and are
+            made available to you under the
+            <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license.
+          </p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div id="downloads" class="overlay midday content">
-    <h1>Use M.GRL!</h1>
+    <div id="downloads">
+      <h1>Use M.GRL!</h1>
 
-    <p>
-      This section would have the release download links, and then
-      links to tutorials.
-    </p>
-  </div>
+      <p>
+        This section would have the release download links, and then
+        links to tutorials.
+      </p>
+    </div>
 
-  <div id="resources" class="overlay midday content">
-    <h1>Resources</h1>
+    <div id="resources">
+      <h1>Resources</h1>
 
-    <p>
-      This section would have links to the github page, reference API,
-      wiki, issue tracker, and unit tests.  It may also contain a few
-      words about how to get in touch.
-    </p>
-  </div>
+      <p>
+        This section would have links to the github page, reference API,
+        wiki, issue tracker, and unit tests.  It may also contain a few
+        words about how to get in touch.
+      </p>
+    </div>
 
-  <div id="community" class="overlay midday content">
-    <h1>Community</h1>
-    <p>
-      Nothing here yet, sorry!  Feel free to say hello
-      <a href="http://twitter.com/ladyaeva">on twitter</a>, though!
-    </p>
+    <div id="community">
+      <h1>Community</h1>
+      <p>
+        Nothing here yet, sorry!  Feel free to say hello
+        <a href="http://twitter.com/ladyaeva">on twitter</a>, though!
+      </p>
+    </div>
   </div>
 
 </body></html>
