added decorations to content boxes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
       <a href="#community">Community</a>
     </div>
   </div>
+  <div id="nav_top_decoration"></div>
+  <div id="nav_bottom_decoration"></div>
+
 
   <div id="content" class="overlay midday">
-    <div id="about">
+    <div id="about" class="page">
       <h1>About M.GRL</h1>
       
       <p>
@@ -79,7 +82,7 @@
       </ul>
     </div>
 
-    <div id="demos">
+    <div id="demos" class="page">
       <h1>Tech Demos</h1>
       <div class="content_flexbox">
         <p>
@@ -130,7 +133,7 @@
       </div>
     </div>
 
-    <div id="downloads">
+    <div id="downloads" class="page">
       <h1>Use M.GRL!</h1>
 
       <p>
@@ -139,7 +142,7 @@
       </p>
     </div>
 
-    <div id="resources">
+    <div id="resources" class="page">
       <h1>Resources</h1>
 
       <p>
@@ -149,7 +152,7 @@
       </p>
     </div>
 
-    <div id="community">
+    <div id="community" class="page">
       <h1>Community</h1>
       <p>
         Nothing here yet, sorry!  Feel free to say hello
@@ -157,5 +160,6 @@
       </p>
     </div>
   </div>
-
+  <div id="content_top_decoration"></div>
+  <div id="content_bottom_decoration"></div>
 </body></html>
