--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html><head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="site_media/fonts/fonts.css" />
   <link rel="stylesheet" type="text/css" href="site_media/mgrl_style.css" />
   <script type="text/javascript" src="demos/gl-matrix.js"></script>
   <script type="text/javascript" src="mgrl.js"></script>
