--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <canvas id="bg_demo"></canvas>
   
   <div id="nav" class="overlay midday">
-    <div id="nav_about" class="nav_item">
-      <a href="#about">About</a>
-    </div>
-    <div id="nav_demos" class="nav_item">
-      <a href="#demos">Demos</a>
-    </div>
-    <div id="nav_downloads" class="nav_item">
-      <a href="#downloads">Use M.GRL!</a>
-    </div>
-    <div id="nav_resources" class="nav_item">
-      <a href="#resources">Get Involved</a>
-    </div>
-    <div id="nav_community" class="nav_item">
-      <a href="#community">Community</a>
-    </div>
+    <a a href="#about" id="nav_about" class="nav_item">
+      About
+    </a>
+    <a href="#demos" id="nav_demos" class="nav_item">
+      Demos
+    </a>
+    <a href="#downloads" id="nav_downloads" class="nav_item">
+      Use M.GRL!
+    </a>
+    <a href="#resources" id="nav_resources" class="nav_item">
+      Get Involved
+    </a>
+    <a href="#community" id="nav_community" class="nav_item">
+      Community
+    </a>
   </div>
   <div id="nav_top_decoration"></div>
   <div id="nav_bottom_decoration"></div>
@@ -72,7 +72,13 @@
           integration with Blender
         </li>
         <li>
-          magical realism & photo surrealistic rendering
+          flexible and intuitive API
+        </li>
+        <li>
+          high fidelity magical realism
+        </li>
+        <li>
+          photo surrealistic rendering
         </li>
         <li>
           source code available under the LGPLv3
