updated site contents

--- a/index.html
+++ b/index.html
@@ -144,19 +144,32 @@
       <h1>Use M.GRL!</h1>
 
       <p>
-        This section would have the release download links, and then
-        links to tutorials.
+        At this point in time, there is no formal release of M.GRL.
+        In the future, you will be able to download a "base template"
+        archive from this page.
+      </p>
+
+      <p>
+        If you are brave, have a look at the <a href="#resources">development
+        resources</a> section.
+      </p>
+
+      <p>
+        Tutorials will also be available here in the future.
+        Unfortunately the <a href="docs/build/html/">documentation index</a>
+        is rather sparse at the moment.
       </p>
     </div>
 
     <div id="resources" class="page">
       <h1>Resources</h1>
-
-      <p>
-        This section would have links to the github page, reference API,
-        wiki, issue tracker, and unit tests.  It may also contain a few
-        words about how to get in touch.
-      </p>
+      <ul>
+        <li><a href="https://github.com/aeva/m.grl/">Source Code</a></li>
+        <li><a href="docs/build/html/api_reference/">API Reference</a></li>
+        <li><a href="https://github.com/Aeva/m.grl/issues">Issue Tracker</a></li>
+        <li><a href="https://github.com/Aeva/m.grl/wiki">Project Wiki</a>
+        <li><a href="tests/">Unit Tests</a></li>
+      </ul>
     </div>
 
     <div id="community" class="page">
