mediaquery+css for better display on small screen widths

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html><head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="site_media/fonts/fonts.css" />
-  <link rel="stylesheet" type="text/css" href="site_media/mgrl_style.css" />
+  <link rel="stylesheet" type="text/css"
+        media="(max-width: 939px)" href="site_media/mobile_style.css" />
+  <link rel="stylesheet" type="text/css"
+        media="(min-width: 940px)" href="site_media/mgrl_style.css" />
   <script type="text/javascript" src="demos/gl-matrix.js"></script>
   <script type="text/javascript" src="mgrl.js"></script>
   <script type="text/javascript" src="site_media/navigation.js"></script>
