updated demo title name

--- a/demos/stereo/index.html
+++ b/demos/stereo/index.html
@@ -8,13 +8,13 @@
   <script type="text/javascript" src="demo_06.js"></script>
   <style type="text/css">
    #headline {
-     background-color: #000098!important;
+     background-color: #888!important;
    }
   </style>
 </head><body>
   <div id="page">
     <h1>Midnight Graphics & Recreation Library</h1>
-    <h1 id="headline">06 Models, Textures, Etc</h1>
+    <h1 id="headline">Anaglyph Rendering</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
     <div id="loading_screen" class="game_screen">
