--- a/demos/stereo/index.html
+++ b/demos/stereo/index.html
@@ -5,10 +5,16 @@
   <link rel="stylesheet" type="text/css" href="../gl_common.css" />
   <script type="text/javascript" src="../gl-matrix.js"></script>
   <script type="text/javascript" src="../../mgrl.js"></script>
-  <script type="text/javascript" src="demo_06.js"></script>
+  <script type="text/javascript" src="demo.js"></script>
   <style type="text/css">
    #headline {
      background-color: #888!important;
+   }
+
+   #options {
+     padding-left: 4em;
+     padding-right: 4em;
+     text-align: center;
    }
   </style>
 </head><body>
@@ -16,6 +22,22 @@
     <h1>Midnight Graphics & Recreation Library</h1>
     <h1 id="headline">Anaglyph Rendering</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
+    <div id="options">
+      <span id="stereo_options">
+        Stereo mode:
+        <select name="stereo_mode" id="render_mode">
+          <option value="color" selected>Color Split</option>
+          <option value="frame">Frame Split</option>
+        </select>
+      </span>
+      <span id="color_options">
+        Glasses config:
+        <input name="lhs_color" id="lhs_color"
+               type="color" value="#FF0000"/>
+        <input name="rhs_color" id="rhs_color"
+               type="color" value="#00FFFF"/>
+      </span>
+    </div>
 
     <div id="loading_screen" class="game_screen">
       <div id="loading_box">
