added stereoscopic rendering to the demo index

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <p class="demo_link">
           <a href="demos/bezier_pick/">Bezier Curves</a>
         </p>
+        <p class="demo_link">
+          <a href="demos/stereo/">Stereoscopic Rendering</a>
+        </p>
         <div class="fine_print">
           <p>
             M.GRL is made available to you as free software under the terms of
