Added the ability to turn off stereo effect in stereo demo

--- a/demos/stereo/index.html
+++ b/demos/stereo/index.html
@@ -26,6 +26,7 @@
       <span id="stereo_options">
         Stereo mode:
         <select name="stereo_mode" id="render_mode">
+          <option value="mono">Off</option>
           <option value="color" selected>Color Split</option>
           <option value="frame">Frame Split</option>
         </select>
