#100 tweaking compositing demo

--- a/demos/compositing_test/index.html
+++ b/demos/compositing_test/index.html
@@ -11,6 +11,7 @@
 </head><body>
   <div id="demo_area">
     <div id="fps_counter">FPS:<span id="fps">???</span></div>
+    <div id="loading_screen"></div>
     <canvas id="gl_canvas" class="fullscreen" width=840 height=630>
       Your browser does not appear to support HTML5 canvas and/or webgl.
     </canvas>
