--- a/demos/bezier_pick/index.html
+++ b/demos/bezier_pick/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <link rel="stylesheet" type="text/css" href="../gl_common.css" />
   <script type="text/javascript" src="../gl-matrix.js"></script>
-  <script type="text/javascript" src="mgrl.js"></script>
+  <script type="text/javascript" src="../../mgrl.js"></script>
   <script type="text/javascript" src="demo.js"></script>
   <style type="text/css">
    #headline {
