updated demo index on the project site

--- a/index.html
+++ b/index.html
@@ -99,23 +99,21 @@
           The old demos page can be found <a href="demos/">here</a>.
         </p>
         <p class="demo_link">
-          <a href="demos/05_webgl/">GLSL Abstraction</a>
+          <a href="/demos/particles/">Particle System</a>
         </p>
         <p class="demo_link">
-          <a href="demos/06_models/">3D Assets</a>
-        </p>
-        <p class="demo_link">
-          <a href="demos/07_multipass/">Post Processing</a>
-        </p>
-        <p class="demo_link">
-          <a href="demos/gavroche_hall/">JTA Debug</a>
-        </p>
-        <p class="demo_link">
-          <a href="demos/bezier_pick/">Bezier Curves</a>
+          <a href="demos/compositing_demo/">Multipass Rendering</a>
         </p>
         <p class="demo_link">
           <a href="demos/stereo/">Stereoscopic Rendering</a>
         </p>
+        <p class="demo_link">
+          <a href="demos/bezier_pick/">Bezier Curves & 3D Mouse Events</a>
+        </p>
+        <p class="demo_link">
+          <a href="demos/distorted_selection/">3D Mouse Events w/ Compositing</a>
+        </p>
+
         <div class="fine_print">
           <p>
             M.GRL is made available to you as free software under the terms of
@@ -170,6 +168,7 @@
     <div id="resources" class="page">
       <h1>Resources</h1>
       <ul>
+        <li><a href="http://forum.midnightsisters.org">Forum</a></li>
         <li><a href="https://github.com/aeva/m.grl/">Source Code</a></li>
         <li><a href="docs/build/html/api_reference/">API Reference</a></li>
         <li><a href="https://github.com/Aeva/m.grl/issues">Issue Tracker</a></li>
@@ -180,10 +179,9 @@
 
     <div id="community" class="page">
       <h1>Community</h1>
-      <p>
-        Nothing here yet, sorry!  Feel free to say hello
-        <a href="http://twitter.com/ladyaeva">on twitter</a>, though!
-      </p>
+      <ul>
+        <li><a href="http://forum.midnightsisters.org">Forum</a></li>
+      </ul>
     </div>
   </div>
   <div id="content_top_decoration"></div>
