#175 - tweaking test runner, added tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="runner.js"></script>
 
   <!-- unit test defined in the files listed below -->
-  <script type="text/javascript" src="glsl_compiler.js"></script>
+  <script type="text/javascript" src="test.gl.ast.js"></script>
 </head><body>
   <div id="status" class="header">idle</div>
   <div id="test_results"></div>
@@ -15,4 +15,5 @@
     <div class="header">Verbose output:</div>
     <div id="output"></div>
   </div>
+  <canvas id="gl_canvas" width=100 height=100></canvas>
 </body></html>
