#175 - added regen_tests.py script

--- a/tests/index.html
+++ b/tests/index.html
@@ -6,8 +6,16 @@
   <script type="text/javascript" src="../mgrl.js"></script>
   <script type="text/javascript" src="runner.js"></script>
 
-  <!-- unit test defined in the files listed below -->
+  <!-- BEGIN UNIT TEST FILES -->
   <script type="text/javascript" src="test.gl.ast.js"></script>
+  <script type="text/javascript" src="gl_ast/test.comment.js"></script>
+  <script type="text/javascript" src="gl_ast/test.block.js"></script>
+  <script type="text/javascript" src="gl_ast/test.parenthetical.js"></script>
+  <script type="text/javascript" src="gl_ast/test.macros.js"></script>
+  <script type="text/javascript" src="gl_ast/test.common.js"></script>
+  <script type="text/javascript" src="gl_ast/test.invocation.js"></script>
+  <script type="text/javascript" src="gl_ast/test.global.js"></script>
+  <!-- END UNIT TEST FILES -->
 </head><body>
   <div id="status" class="header">idle</div>
   <div id="test_results"></div>
