#179 - added hexcode syntax to GLSL

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="gl_ast/test.block.js"></script>
   <script type="text/javascript" src="gl_ast/test.parenthetical.js"></script>
   <script type="text/javascript" src="gl_ast/test.macros.js"></script>
+  <script type="text/javascript" src="gl_ast/test.hexcode.js"></script>
   <script type="text/javascript" src="gl_ast/test.common.js"></script>
   <script type="text/javascript" src="gl_ast/test.invocation.js"></script>
   <script type="text/javascript" src="gl_ast/test.global.js"></script>
