--- a/demos/dynamic_glsl/index.html
+++ b/demos/dynamic_glsl/index.html
@@ -66,7 +66,7 @@
             <a href="http://stephaniehurlburt.com/blog/2016/1/3/building-a-glsl-shader-compiler">this blog post</a>.
           </p>
           <div class="button_area">
-            <button id="hide_intro">Ok - Hide this box please!</button>
+            <button id="hide_intro" autofocus>Ok - Hide this box please!</button>
           </div>
         </div>
       </div>
