chrome-specific tweak

--- a/demos/dynamic_glsl/index.html
+++ b/demos/dynamic_glsl/index.html
@@ -20,7 +20,7 @@
     <div id="controls" class="hidden">
       
       <div id="editor">
-        <textarea id="shader_source" autofocus=1 spellcheck=0></textarea>
+        <textarea id="shader_source" spellcheck=0></textarea>
         <div id="compiler_output"></div>
         <div class="button_area">
           <button id="hide_source">Hide source</button>
@@ -66,7 +66,7 @@
             <a href="http://stephaniehurlburt.com/blog/2016/1/3/building-a-glsl-shader-compiler">this blog post</a>.
           </p>
           <div class="button_area">
-            <button id="hide_intro" autofocus>Ok - Hide this box please!</button>
+            <button id="hide_intro" autofocus=1>Ok - Hide this box please!</button>
           </div>
         </div>
       </div>
