updated demos section

--- a/index.html
+++ b/index.html
@@ -95,9 +95,6 @@
     <div id="demos" class="page">
       <h1>Tech Demos</h1>
       <div class="content_flexbox">
-        <p>
-          The old demos page can be found <a href="demos/">here</a>.
-        </p>
         <p class="demo_link">
           <a href="/demos/particles/">Particle System</a>
         </p>
@@ -112,6 +109,9 @@
         </p>
         <p class="demo_link">
           <a href="demos/distorted_selection/">3D Mouse Events w/ Compositing</a>
+        </p>
+        <p class="demo_link">
+          <a href="demos/dynamic_glsl/">GLSL to GLSL compiler</a>
         </p>
 
         <div class="fine_print">
