added function hoisting and function prototypes to glsl compiler

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@
   <!-- BEGIN UNIT TEST FILES -->
   <script type="text/javascript" src="test.gl.ast.js"></script>
   <script type="text/javascript" src="gl_ast/test.comment.js"></script>
+  <script type="text/javascript" src="gl_ast/test.function_prototype.js"></script>
   <script type="text/javascript" src="gl_ast/test.block.js"></script>
   <script type="text/javascript" src="gl_ast/test.parenthetical.js"></script>
   <script type="text/javascript" src="gl_ast/test.macros.js"></script>
