#181 reworked dynamic_glsl demo to use concatinated fragment shader

--- a/demos/dynamic_glsl/index.html
+++ b/demos/dynamic_glsl/index.html
@@ -4,8 +4,9 @@
   <script type="text/javascript" src="../gl-matrix.js"></script>
   <script type="text/javascript" src="../../mgrl.js"></script>
   <link rel="stylesheet" type="text/css" href="libs/theme.css" />
-  
+
   <script type="text/javascript" src="project.js"></script>
+  <script type="text/javascript" src="bindings.js"></script>
   <link rel="stylesheet" type="text/css" href="ui.css" />
   <link rel="stylesheet" type="text/css" href="demo.css" />
   
