--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,9 @@
   <script type="text/javascript" src="runner.js"></script>
 
   <!-- BEGIN UNIT TEST FILES -->
+  <script type="text/javascript" src="test.staticdraw.js"></script>
   <script type="text/javascript" src="test.gl.ast.js"></script>
+  <script type="text/javascript" src="test.gl.js"></script>
   <script type="text/javascript" src="gl_ast/test.comment.js"></script>
   <script type="text/javascript" src="gl_ast/test.function_prototype.js"></script>
   <script type="text/javascript" src="gl_ast/test.block.js"></script>
