#198 retrofitted demos to use set_viewport

--- a/demos/stereo/index.html
+++ b/demos/stereo/index.html
@@ -33,21 +33,11 @@
       </span>
       <span id="color_options">
         Glasses config:
-        <input name="lhs_color" id="lhs_color"
+        <input name="left_color" id="lhs_color"
                type="color" value="#FF0000"/>
-        <input name="rhs_color" id="rhs_color"
+        <input name="right_color" id="rhs_color"
                type="color" value="#00FFFF"/>
       </span>
-    </div>
-
-    <div id="loading_screen" class="game_screen">
-      <div id="loading_box">
-        <div id="progress">
-          <div id="progress_bar" style="width:0%;"></div>
-          <div id="percent">unknown %</div>
-        </div>
-        <div id="progress_info"></div>
-      </div>
     </div>
     
     <div id="demo_area" class="game_screen">
