#198 removed uneccesary canvas sizing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="site_media/test_scene.js"></script>
 </head><body>
 
-  <canvas class="fullscreen" width="1024" height="1024" id="bg_demo"></canvas>
+  <canvas class="fullscreen" id="bg_demo"></canvas>
   
   <div id="nav" class="overlay midday">
     <a a href="#about" id="nav_about" class="nav_item">
