#206 temporarily unlisting broken demo

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <p class="demo_link">
           <a href="demos/compositing_demo/">Multipass Rendering</a>
         </p>
-        <p class="demo_link">
+        <!-- <p class="demo_link">
           <a href="demos/stereo/">Stereoscopic Rendering</a>
-        </p>
+        </p> -->
         <p class="demo_link">
           <a href="demos/bezier_pick/">Bezier Curves & 3D Mouse Events</a>
         </p>
