--- a/tests/index.html
+++ b/tests/index.html
@@ -8,6 +8,7 @@
 
   <!-- BEGIN UNIT TEST FILES -->
   <script type="text/javascript" src="test.staticdraw.js"></script>
+  <script type="text/javascript" src="test.misc.js"></script>
   <script type="text/javascript" src="test.gl.ast.js"></script>
   <script type="text/javascript" src="test.gl.js"></script>
   <script type="text/javascript" src="gl_ast/test.comment.js"></script>
