--- a/demos/compositing_demo/index.html
+++ b/demos/compositing_demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html><head>
   <meta charset="UTF-8">
-  <script type="text/javascript" src="libs/gl-matrix.js"></script>
+  <script type="text/javascript" src="../gl-matrix.js"></script>
   <script type="text/javascript" src="../../mgrl.js"></script>
   <link rel="stylesheet" type="text/css" href="libs/theme.css" />
   
