removed redundant theme files

--- a/demos/color_curves/index.html
+++ b/demos/color_curves/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <script type="text/javascript" src="../gl-matrix.js"></script>
   <script type="text/javascript" src="../../mgrl.js"></script>
-  <link rel="stylesheet" type="text/css" href="libs/theme.css" />
+  <link rel="stylesheet" type="text/css" href="../theme.css" />
   
   <script type="text/javascript" src="project.js"></script>
   <link rel="stylesheet" type="text/css" href="ui.css" />
